Version 5.5.1
- Fixed Spin startup function (should be first PUB function, not first function)
- Fixed evaluation of @ inside CONSTANT
- Fixed assembly of PTRA++[0] and PTRA++[16]
- Fixed some spurious warnings about uninitialized variables
- Fixed an optimization error for BYTE[] and WORD[]
- Fixed incorrect unary assignment operator behavior in Spin
- Fixed SIGNX= and ZEROX= in Spin2
- Fixed ~~x and ~x in Spin1
- Improved COG memory usage
- Improved conversion of longmove() in Spin to handle labels
- Made objects come after all variables in Spin
- Merged colorized error message changes from Wuerfel21.
- ALPHA: new bytecode backend from Wuerfel21, accessed by --interp=rom. This is not finished yet but can compile many Spin1 programs.

Version 5.5.0
- Added warning for modifying ptra in inline assembly
- Added throwifcaught command for BASIC
- Allowed '$' in inline assembly in C
- Fixed a problem with large ranges in lookup/lookdown
- Fixed a preprocessor bug which sometimes caused failure to recognize comments
- Fixed a bug in handling multiple return values that are less than long sized
- If -Wall is given, warn about uninitialized local variables
- Implemented "public" and "private" in C++ classes
- Improved listing file output by adding RES and FIT entries

Version 5.4.3
- Clear all errors on successful open
- Fixed path lookup on Windows under cmd.exe

Version 5.4.2
- Added support for range cases (a ... b) to C
- Fixed constant evaluation of some Spin2 operators
- Fixed bitfield access to memory references
- Fixed mixing reads and writes in C stdio
- Fixed mixing fgetc and fread in C stdio
- Fixed a bug in determining types of Spin2 constants in other objects

Version 5.4.1
- Added __DATE__, __TIME__, __FILE__, and __LINE__ macros
- Added documentation for __VERSION__ macro
- Allowed wc and wz on indirect jumps on P2
- Check for gosub commands inside FCACHEd code
- Fixed incorrect common sub-expression elimination after labels